[package]
name = "easy-assert"
version = "0.2.1"
edition = "2021"
description = "A library for readable assertions in your tests"
keywords = ["testing", "assertions", "tdd", "assert-that", "bdd"]
categories = ["development-tools", "development-tools::testing"]
license = "MIT/Apache-2.0"
repository = "https://github.com/MIF-0/easy-assert"
documentation = "https://docs.rs/easy-assert"
readme = "README.md"
authors = ["Vladyslav Bukatin <ender.ender321.@gmail.com>"]

[dependencies]
num-traits = "0.2"
